
add_subdirectory(animated-windows)
add_subdirectory(frame-timer)
add_subdirectory(hello-world)
add_subdirectory(launch-intents)
add_subdirectory(minidesk)
add_subdirectory(application-features)
add_subdirectory(multi-views)
add_subdirectory(process-status)
add_subdirectory(startup-plugin)
add_subdirectory(intents)
add_subdirectory(custom-appman)
if(LINUX)
    add_subdirectory(softwarecontainer-plugin)
endif()
