
add_subdirectory(application)
add_subdirectory(applicationinfo)
add_subdirectory(applicationinstaller)
add_subdirectory(configuration)
add_subdirectory(cryptography)
add_subdirectory(debugwrapper)
add_subdirectory(installationreport)
add_subdirectory(main)
add_subdirectory(packagecreator)
add_subdirectory(packageextractor)
add_subdirectory(packager-tool)
add_subdirectory(qml)
add_subdirectory(runtime)
add_subdirectory(signature)
add_subdirectory(utilities)
add_subdirectory(yaml)

if(LINUX)
    add_subdirectory(systemreader)
    add_subdirectory(processreader)
    add_subdirectory(sudo)
endif()
