
if (NOT QT_FEATURE_am_installer)
    message(WARNING "QT_FEATURE_am_installer is disabled, skipping all auto tests")
    return()
endif()

add_subdirectory(application)
add_subdirectory(applicationinfo)
add_subdirectory(packagemanager)
add_subdirectory(configuration)
add_subdirectory(cryptography)
add_subdirectory(debugwrapper)
add_subdirectory(installationreport)
add_subdirectory(main)
if (NOT IOS)
    add_subdirectory(packagecreator)
endif()
add_subdirectory(packageextractor)
add_subdirectory(packager-tool)
if (NOT ANDROID)
    add_subdirectory(qml)
endif()
add_subdirectory(runtime)
add_subdirectory(signature)
add_subdirectory(architecture)
add_subdirectory(yaml)

if (LINUX)
    add_subdirectory(systemreader)
    add_subdirectory(processreader)
    add_subdirectory(sudo)
    if (TARGET Qt::DBus)
        add_subdirectory(controller-tool)
    endif()
endif()
